--- a/views/home.ejs
+++ b/views/home.ejs
@@ -65,150 +65,13 @@
 </div>
 
 <div class="marshmallow-div">
-  <p>Desserts</p>
-  <p><q>We have desserts too...</q></p>
+  <div class="marshmallow-content">
+    <p>Desserts</p>
+    <p><q>We have desserts too...</q></p>
+  </div>
   <img class="marshmallow-pic" src="/images/marshmallow.png" alt="">
 </div>
 
-<div class="body-content">
-  <div class="a-btn">
-    <a href="#chicken">Chicken</a>
-    <a href="#beef">Beef</a>
-    <a href="#pork">Pork</a>
-    <a href="#veggie">Veggies</a>
-    <a href="#other-meat">Other Meat</a>
-  </div>
-  <div class="slider">
-    <div id="chicken" class="food-container top-row right-prt chick-container">
-      <h1>Chicken</h1>
-      <div class="grid-item">
-        <img src="/images/chicken.jpg" alt="chick-pic">
-        <h5>Chicken</h5>
-      </div>
-      <div class="grid-item">
-        <img src="/images/chicken.jpg" alt="chick-pic">
-        <h5>Chicken</h5>
-      </div>
-      <div class="grid-item">
-        <img src="/images/chicken.jpg" alt="chick-pic">
-        <h5>Food Title</h5>
-      </div>
-      <div class="grid-item">
-        <img src="/images/chicken.jpg" alt="chick-pic">
-        <h5>Food Title</h5>
-      </div>
-      <div class="grid-item">
-        <img src="/images/chicken.jpg" alt="chick-pic">
-        <h5>Food Title</h5>
-      </div>
-      <div class="grid-item">
-        <img src="/images/chicken.jpg" alt="chick-pic">
-        <h5>Food Title</h5>
-      </div>
-      <div class="grid-item">
-        <img src="/images/chicken.jpg" alt="chick-pic">
-        <h5>Food Title</h5>
-      </div>
-      <div class="grid-item">
-        <img src="/images/chicken.jpg" alt="chick-pic">
-        <h5>Food Title</h5>
-      </div>
-    </div>
-    <div id="beef" class="food-container top-row left-prt beef-container">
-      <h1>Beef</h1>
-      <div class="grid-item">
-        <img src="/images/beef.jpg" alt="beef-pic">
-        <h5>Beef</h5>
-      </div>
-      <div class="grid-item">
-        <img src="/images/beef.jpg" alt="beef-pic">
-        <h5>Beef</h5>
-      </div>
-      <div class="grid-item">
-        <img src="/images/beef.jpg" alt="beef-pic">
-        <h5>Beef</h5>
-      </div>
-      <div class="grid-item">
-        <img src="/images/beef.jpg" alt="beef-pic">
-        <h5>Beef</h5>
-      </div>
-      <div class="grid-item">
-        <img src="/images/beef.jpg" alt="beef-pic">
-        <h5>Beef</h5>
-      </div>
-    </div>
-    <div id="pork" class="food-container sec-row right-prt Pork-container">
-      <h1>Pork</h1>
-      <div class="grid-item">
-        <img src="/images/pork.jpg" alt="pork-pic">
-        <h5>Pork</h5>
-      </div>
-      <div class="grid-item">
-        <img src="/images/pork.jpg" alt="pork-pic">
-        <h5>Pork</h5>
-      </div>
-      <div class="grid-item">
-        <img src="/images/pork.jpg" alt="pork-pic">
-        <h5>Pork</h5>
-      </div>
-      <div class="grid-item">
-        <img src="/images/pork.jpg" alt="pork-pic">
-        <h5>Pork</h5>
-      </div>
-      <div class="grid-item">
-        <img src="/images/pork.jpg" alt="pork-pic">
-        <h5>Pork</h5>
-      </div>
-    </div>
-    <div id="veggie" class="food-container sec-row left-prt Veg-container">
-      <h1>Veggies</h1>
-      <div class="grid-item">
-        <img src="/images/veg.jpg" alt="veggies-pic">
-        <h5>Veggies</h5>
-      </div>
-      <div class="grid-item">
-        <img src="/images/veg.jpg" alt="veggies-pic">
-        <h5>Veggies</h5>
-      </div>
-      <div class="grid-item">
-        <img src="/images/veg.jpg" alt="veggies-pic">
-        <h5>Veggies</h5>
-      </div>
-      <div class="grid-item">
-        <img src="/images/veg.jpg" alt="veggies-pic">
-        <h5>Veggies</h5>
-      </div>
-      <div class="grid-item">
-        <img src="/images/veg.jpg" alt="veggies-pic">
-        <h5>Veggies</h5>
-      </div>
-    </div>
-    <div id="other-meat" class="food-container top-row right-prt chick-container">
-      <h1>Other Meat</h1>
-      <div class="grid-item">
-        <img src="/images/chicken.jpg" alt="chick-pic">
-        <h5>Chicken</h5>
-      </div>
-      <div class="grid-item">
-        <img src="/images/chicken.jpg" alt="chick-pic">
-        <h5>Food Title</h5>
-      </div>
-      <div class="grid-item">
-        <img src="/images/chicken.jpg" alt="chick-pic">
-        <h5>Food Title</h5>
-      </div>
-      <div class="grid-item">
-        <img src="/images/chicken.jpg" alt="chick-pic">
-        <h5>Food Title</h5>
-      </div>
-      <div class="grid-item">
-        <img src="/images/chicken.jpg" alt="chick-pic">
-        <h5>Food Title</h5>
-      </div>
-    </div>
-  </div>
 
-
-</div>
 
 <%- include('partials/footer'); -%>
