--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,6 +8,7 @@
   <title>TN Recipe</title>
   <link rel="stylesheet" href="/css/firstStyleSheets.css">
   <link rel="stylesheet" href="/css/homepage.css">
+  <link rel="stylesheet" href="/css/about.css">
   <link rel="stylesheet" href="/css/media-queries.css">
 
 
@@ -17,17 +18,4 @@
 
 </head>
 
-<div class="recipe-title">
-  <div class="navbar">
-    <p><a href="#">Home</a></p>
-    <p><a href="#">Categories</a></p>
-    <p><a href="#">About</a></p>
-  </div>
-  <div class="web-name">
-    <h1>Tin-Recipes</h1>
-    <p><q>Recipes to inspire your inner chef</q></p>
-    <input class="search-btn" type="search" placeholder="Search for recipes">
-  </div>
-  <img src="/images/top-background.jpg" alt="">
-</div>
 <body>
