--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,3 +19,17 @@
 </head>
 
 <body>
+
+  <div class="recipe-title">
+    <div class="navbar">
+      <p><a href="#">Home</a></p>
+      <p><a href="#">Categories</a></p>
+      <p><a href="#">About</a></p>
+    </div>
+    <div class="web-name">
+      <h1><%= title %></h1>
+      <p><q>Recipes to inspire your inner chef</q></p>
+      <input class="search-btn" type="search" placeholder="Search for recipes">
+    </div>
+    <img src="/images/top-background.jpg" alt="">
+  </div>
