--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header'); -%>
 
-<div class="recipe-title">
+<!-- <div class="recipe-title">
   <div class="navbar">
     <p><a href="#">Home</a></p>
     <p><a href="#">Categories</a></p>
@@ -12,7 +12,7 @@
     <p>is to stand for something good and healthy</p>
   </div>
   <img src="/images/top-background.jpg" alt="">
-</div>
+</div> -->
 
 <div class="about-content">
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nec dolor porttitor, venenatis ante in, volutpat magna. Duis magna sapien,
