Categories content added -unfinished

--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -1,1 +1,29 @@
 <%- include('partials/header'); -%>
+
+<div class="categories-body">
+  <div class="food-choices">
+    <p class="categories-btn" href="#">Chicken</p>
+    <p class="categories-btn" href="#">Beef</p>
+    <p class="categories-btn" href="#">Pork</p>
+    <p class="categories-btn" href="#">Veggies</p>
+    <p class="categories-btn" href="#">Other Meat</p>
+    <p class="categories-btn" href="#">Desserts</p>
+  </div>
+
+  <div class="categories-content">
+    <div class="top-hit">
+    <div class="top-list">
+      <img src="/images/chicken.jpg" alt="">
+      <p>Food Title</p>
+      <button type="button" name="like"><i class="far fa-heart"></i></button>
+      <button type="button" name="like"><i class="far fa-comments"></i></button>
+      <button type="button" name="like"><i class="far fa-share-square"></i></button>
+    </div>
+    </div>
+    <div class="food-list">
+
+    </div>
+  </div>
+
+
+</div>
