--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="/css/firstStyleSheets.css">
   <link rel="stylesheet" href="/css/homepage.css">
   <link rel="stylesheet" href="/css/about.css">
+  <link rel="stylesheet" href="/css/categories.css">
   <link rel="stylesheet" href="/css/media-queries.css">
 
 
@@ -22,13 +23,13 @@
 
   <div class="recipe-title">
     <div class="navbar">
-      <p><a href="#">Home</a></p>
-      <p><a href="#">Categories</a></p>
-      <p><a href="#">About</a></p>
+      <p><a href="/">Home</a></p>
+      <p><a href="/categories">Categories</a></p>
+      <p><a href="/about">About</a></p>
     </div>
     <div class="web-name">
       <h1><%= title %></h1>
-      <p><q>Recipes to inspire your inner chef</q></p>
+      <p><q><%= webQoute %></q></p>
       <input class="search-btn" type="search" placeholder="Search for recipes">
     </div>
     <img src="/images/top-background.jpg" alt="">
