--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -10,17 +10,50 @@
   </div>
 
   <div class="categories-content">
-    <div class="top-hit">
-    <div class="top-list">
+    <div class="item-list">
       <img src="/images/chicken.jpg" alt="">
       <p>Food Title</p>
-      <button type="button" name="like"><i class="far fa-heart"></i></button>
-      <button type="button" name="like"><i class="far fa-comments"></i></button>
-      <button type="button" name="like"><i class="far fa-share-square"></i></button>
+      <div class="social-btn">
+        <button type="button" name="like"><i class="far fa-heart"></i></button>
+        <button type="button" name="like"><i class="far fa-comments"></i></button>
+        <button type="button" name="like"><i class="far fa-share-square"></i></button>
+      </div>
     </div>
+    <div class="item-list">
+      <img src="/images/chicken.jpg" alt="">
+      <p>Food Title</p>
+      <div class="social-btn">
+        <button type="button" name="like"><i class="far fa-heart"></i></button>
+        <button type="button" name="like"><i class="far fa-comments"></i></button>
+        <button type="button" name="like"><i class="far fa-share-square"></i></button>
+      </div>
     </div>
-    <div class="food-list">
-
+    <div class="item-list">
+      <img src="/images/chicken.jpg" alt="">
+      <p>Food Title</p>
+      <div class="social-btn">
+        <button type="button" name="like"><i class="far fa-heart"></i></button>
+        <button type="button" name="like"><i class="far fa-comments"></i></button>
+        <button type="button" name="like"><i class="far fa-share-square"></i></button>
+      </div>
+    </div>
+    <div class="item-list">
+      <img src="/images/chicken.jpg" alt="">
+      <p>Food Title</p>
+      <div class="social-btn">
+        <button type="button" name="like"><i class="far fa-heart"></i></button>
+        <button type="button" name="like"><i class="far fa-comments"></i></button>
+        <button type="button" name="like"><i class="far fa-share-square"></i></button>
+      </div>
+    </div>
+    <div class="item-list">
+      <img src="/images/chicken.jpg" alt="">
+      <p>Food Title</p>
+      <div class="social-btn">
+        <button type="button" name="like"><i class="far fa-heart"></i></button>
+        <button type="button" name="like"><i class="far fa-comments"></i></button>
+        <button type="button" name="like"><i class="far fa-share-square"></i></button>
+      </div> 
     </div>
   </div>
 
