--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -1,61 +1,350 @@
 <%- include('partials/header'); -%>
 <div class="categories-body">
   <div class="food-choices">
-    <p class="categories-btn" href="#">Chicken</p>
-    <p class="categories-btn" href="#">Beef</p>
-    <p class="categories-btn" href="#">Pork</p>
-    <p class="categories-btn" href="#">Veggies</p>
-    <p class="categories-btn" href="#">Other Meat</p>
-    <p class="categories-btn" href="#">Desserts</p>
+    <p class="categories-btn chicken" >Chicken</p>
+    <p class="categories-btn beef"  >Beef</p>
+    <p class="categories-btn pork"  > Pork</p>
+    <p class="categories-btn veggies"  >Veggies</p>
+    <p class="categories-btn oth-meat"  >Other Meat</p>
+    <p class="categories-btn desserts" >Desserts</p>
   </div>
 
-  <div class="categories-content">
-    <div class="item-list">
-      <img src="/images/chicken.jpg" alt="">
-      <p>Food Title</p>
-      <div class="social-btn">
-        <button type="button" name="like"><i class="far fa-heart"></i></button>
-        <button type="button" name="like"><i class="far fa-comments"></i></button>
-        <button type="button" name="like"><i class="far fa-share-square"></i></button>
+  <div class="section chicken-section" id="chicken">
+    <div class="categories-content">
+      <div class="item-list">
+        <img src="/images/chicken.jpg" alt="">
+        <p>Food Title</p>
+        <div class="social-btn">
+          <button type="button" name="like"><i class="far fa-heart"></i></button>
+          <button type="button" name="like"><i class="far fa-comments"></i></button>
+          <button type="button" name="like"><i class="far fa-share-square"></i></button>
+        </div>
+      </div>
+      <div class="item-list">
+        <img src="/images/chicken.jpg" alt="">
+        <p>Food Title</p>
+        <div class="social-btn">
+          <button type="button" name="like"><i class="far fa-heart"></i></button>
+          <button type="button" name="like"><i class="far fa-comments"></i></button>
+          <button type="button" name="like"><i class="far fa-share-square"></i></button>
+        </div>
+      </div>
+      <div class="item-list">
+        <img src="/images/chicken.jpg" alt="">
+        <p>Food Title</p>
+        <div class="social-btn">
+          <button type="button" name="like"><i class="far fa-heart"></i></button>
+          <button type="button" name="like"><i class="far fa-comments"></i></button>
+          <button type="button" name="like"><i class="far fa-share-square"></i></button>
+        </div>
+      </div>
+      <div class="item-list">
+        <img src="/images/chicken.jpg" alt="">
+        <p>Food Title</p>
+        <div class="social-btn">
+          <button type="button" name="like"><i class="far fa-heart"></i></button>
+          <button type="button" name="like"><i class="far fa-comments"></i></button>
+          <button type="button" name="like"><i class="far fa-share-square"></i></button>
+        </div>
+      </div>
+      <div class="item-list">
+        <img src="/images/chicken.jpg" alt="">
+        <p>Food Title</p>
+        <div class="social-btn">
+          <button type="button" name="like"><i class="far fa-heart"></i></button>
+          <button type="button" name="like"><i class="far fa-comments"></i></button>
+          <button type="button" name="like"><i class="far fa-share-square"></i></button>
+        </div>
+      </div>
+      <div class="item-list">
+        <img src="/images/chicken.jpg" alt="">
+        <p>Food Title</p>
+        <div class="social-btn">
+          <button type="button" name="like"><i class="far fa-heart"></i></button>
+          <button type="button" name="like"><i class="far fa-comments"></i></button>
+          <button type="button" name="like"><i class="far fa-share-square"></i></button>
+        </div>
+      </div>
+      <div class="item-list">
+        <img src="/images/chicken.jpg" alt="">
+        <p>Food Title</p>
+        <div class="social-btn">
+          <button type="button" name="like"><i class="far fa-heart"></i></button>
+          <button type="button" name="like"><i class="far fa-comments"></i></button>
+          <button type="button" name="like"><i class="far fa-share-square"></i></button>
+        </div>
+      </div>
+      <div class="item-list">
+        <img src="/images/chicken.jpg" alt="">
+        <p>Food Title</p>
+        <div class="social-btn">
+          <button type="button" name="like"><i class="far fa-heart"></i></button>
+          <button type="button" name="like"><i class="far fa-comments"></i></button>
+          <button type="button" name="like"><i class="far fa-share-square"></i></button>
+        </div>
+      </div>
+      <div class="item-list">
+        <img src="/images/chicken.jpg" alt="">
+        <p>Food Title</p>
+        <div class="social-btn">
+          <button type="button" name="like"><i class="far fa-heart"></i></button>
+          <button type="button" name="like"><i class="far fa-comments"></i></button>
+          <button type="button" name="like"><i class="far fa-share-square"></i></button>
+        </div>
       </div>
     </div>
-    <div class="item-list">
-      <img src="/images/chicken.jpg" alt="">
-      <p>Food Title</p>
-      <div class="social-btn">
-        <button type="button" name="like"><i class="far fa-heart"></i></button>
-        <button type="button" name="like"><i class="far fa-comments"></i></button>
-        <button type="button" name="like"><i class="far fa-share-square"></i></button>
+  </div>
+
+  <div class="section beef-section">
+    <div class="categories-content">
+      <div class="item-list">
+        <img src="/images/beef.jpg" alt="">
+        <p>Food Title</p>
+        <div class="social-btn">
+          <button type="button" name="like"><i class="far fa-heart"></i></button>
+          <button type="button" name="like"><i class="far fa-comments"></i></button>
+          <button type="button" name="like"><i class="far fa-share-square"></i></button>
+        </div>
+      </div>
+      <div class="item-list">
+        <img src="/images/beef.jpg" alt="">
+        <p>Food Title</p>
+        <div class="social-btn">
+          <button type="button" name="like"><i class="far fa-heart"></i></button>
+          <button type="button" name="like"><i class="far fa-comments"></i></button>
+          <button type="button" name="like"><i class="far fa-share-square"></i></button>
+        </div>
+      </div>
+      <div class="item-list">
+        <img src="/images/beef.jpg" alt="">
+        <p>Food Title</p>
+        <div class="social-btn">
+          <button type="button" name="like"><i class="far fa-heart"></i></button>
+          <button type="button" name="like"><i class="far fa-comments"></i></button>
+          <button type="button" name="like"><i class="far fa-share-square"></i></button>
+        </div>
+      </div>
+      <div class="item-list">
+        <img src="/images/beef.jpg" alt="">
+        <p>Food Title</p>
+        <div class="social-btn">
+          <button type="button" name="like"><i class="far fa-heart"></i></button>
+          <button type="button" name="like"><i class="far fa-comments"></i></button>
+          <button type="button" name="like"><i class="far fa-share-square"></i></button>
+        </div>
+      </div>
+      <div class="item-list">
+        <img src="/images/beef.jpg" alt="">
+        <p>Food Title</p>
+        <div class="social-btn">
+          <button type="button" name="like"><i class="far fa-heart"></i></button>
+          <button type="button" name="like"><i class="far fa-comments"></i></button>
+          <button type="button" name="like"><i class="far fa-share-square"></i></button>
+        </div>
       </div>
     </div>
-    <div class="item-list">
-      <img src="/images/chicken.jpg" alt="">
-      <p>Food Title</p>
-      <div class="social-btn">
-        <button type="button" name="like"><i class="far fa-heart"></i></button>
-        <button type="button" name="like"><i class="far fa-comments"></i></button>
-        <button type="button" name="like"><i class="far fa-share-square"></i></button>
+  </div>
+
+  <div class="section pork-section">
+    <div class="categories-content">
+      <div class="item-list">
+        <img src="/images/pork.jpg" alt="">
+        <p>Food Title</p>
+        <div class="social-btn">
+          <button type="button" name="like"><i class="far fa-heart"></i></button>
+          <button type="button" name="like"><i class="far fa-comments"></i></button>
+          <button type="button" name="like"><i class="far fa-share-square"></i></button>
+        </div>
+      </div>
+      <div class="item-list">
+        <img src="/images/pork.jpg" alt="">
+        <p>Food Title</p>
+        <div class="social-btn">
+          <button type="button" name="like"><i class="far fa-heart"></i></button>
+          <button type="button" name="like"><i class="far fa-comments"></i></button>
+          <button type="button" name="like"><i class="far fa-share-square"></i></button>
+        </div>
+      </div>
+      <div class="item-list">
+        <img src="/images/pork.jpg" alt="">
+        <p>Food Title</p>
+        <div class="social-btn">
+          <button type="button" name="like"><i class="far fa-heart"></i></button>
+          <button type="button" name="like"><i class="far fa-comments"></i></button>
+          <button type="button" name="like"><i class="far fa-share-square"></i></button>
+        </div>
+      </div>
+      <div class="item-list">
+        <img src="/images/pork.jpg" alt="">
+        <p>Food Title</p>
+        <div class="social-btn">
+          <button type="button" name="like"><i class="far fa-heart"></i></button>
+          <button type="button" name="like"><i class="far fa-comments"></i></button>
+          <button type="button" name="like"><i class="far fa-share-square"></i></button>
+        </div>
+      </div>
+      <div class="item-list">
+        <img src="/images/pork.jpg" alt="">
+        <p>Food Title</p>
+        <div class="social-btn">
+          <button type="button" name="like"><i class="far fa-heart"></i></button>
+          <button type="button" name="like"><i class="far fa-comments"></i></button>
+          <button type="button" name="like"><i class="far fa-share-square"></i></button>
+        </div>
       </div>
     </div>
-    <div class="item-list">
-      <img src="/images/chicken.jpg" alt="">
-      <p>Food Title</p>
-      <div class="social-btn">
-        <button type="button" name="like"><i class="far fa-heart"></i></button>
-        <button type="button" name="like"><i class="far fa-comments"></i></button>
-        <button type="button" name="like"><i class="far fa-share-square"></i></button>
+  </div>
+
+  <div class="section veggies-section">
+    <div class="categories-content">
+      <div class="item-list">
+        <img src="/images/veg.jpg" alt="">
+        <p>Food Title</p>
+        <div class="social-btn">
+          <button type="button" name="like"><i class="far fa-heart"></i></button>
+          <button type="button" name="like"><i class="far fa-comments"></i></button>
+          <button type="button" name="like"><i class="far fa-share-square"></i></button>
+        </div>
+      </div>
+      <div class="item-list">
+        <img src="/images/veg.jpg" alt="">
+        <p>Food Title</p>
+        <div class="social-btn">
+          <button type="button" name="like"><i class="far fa-heart"></i></button>
+          <button type="button" name="like"><i class="far fa-comments"></i></button>
+          <button type="button" name="like"><i class="far fa-share-square"></i></button>
+        </div>
+      </div>
+      <div class="item-list">
+        <img src="/images/veg.jpg" alt="">
+        <p>Food Title</p>
+        <div class="social-btn">
+          <button type="button" name="like"><i class="far fa-heart"></i></button>
+          <button type="button" name="like"><i class="far fa-comments"></i></button>
+          <button type="button" name="like"><i class="far fa-share-square"></i></button>
+        </div>
+      </div>
+      <div class="item-list">
+        <img src="/images/veg.jpg" alt="">
+        <p>Food Title</p>
+        <div class="social-btn">
+          <button type="button" name="like"><i class="far fa-heart"></i></button>
+          <button type="button" name="like"><i class="far fa-comments"></i></button>
+          <button type="button" name="like"><i class="far fa-share-square"></i></button>
+        </div>
+      </div>
+      <div class="item-list">
+        <img src="/images/veg.jpg" alt="">
+        <p>Food Title</p>
+        <div class="social-btn">
+          <button type="button" name="like"><i class="far fa-heart"></i></button>
+          <button type="button" name="like"><i class="far fa-comments"></i></button>
+          <button type="button" name="like"><i class="far fa-share-square"></i></button>
+        </div>
       </div>
     </div>
-    <div class="item-list">
-      <img src="/images/chicken.jpg" alt="">
-      <p>Food Title</p>
-      <div class="social-btn">
-        <button type="button" name="like"><i class="far fa-heart"></i></button>
-        <button type="button" name="like"><i class="far fa-comments"></i></button>
-        <button type="button" name="like"><i class="far fa-share-square"></i></button>
-      </div> 
+  </div>
+
+  <div class="section other-meat-section">
+    <div class="categories-content">
+      <div class="item-list">
+        <img src="/images/lamb.jpg" alt="">
+        <p>Food Title</p>
+        <div class="social-btn">
+          <button type="button" name="like"><i class="far fa-heart"></i></button>
+          <button type="button" name="like"><i class="far fa-comments"></i></button>
+          <button type="button" name="like"><i class="far fa-share-square"></i></button>
+        </div>
+      </div>
+      <div class="item-list">
+        <img src="/images/lamb.jpg" alt="">
+        <p>Food Title</p>
+        <div class="social-btn">
+          <button type="button" name="like"><i class="far fa-heart"></i></button>
+          <button type="button" name="like"><i class="far fa-comments"></i></button>
+          <button type="button" name="like"><i class="far fa-share-square"></i></button>
+        </div>
+      </div>
+      <div class="item-list">
+        <img src="/images/lamb.jpg" alt="">
+        <p>Food Title</p>
+        <div class="social-btn">
+          <button type="button" name="like"><i class="far fa-heart"></i></button>
+          <button type="button" name="like"><i class="far fa-comments"></i></button>
+          <button type="button" name="like"><i class="far fa-share-square"></i></button>
+        </div>
+      </div>
+      <div class="item-list">
+        <img src="/images/lamb.jpg" alt="">
+        <p>Food Title</p>
+        <div class="social-btn">
+          <button type="button" name="like"><i class="far fa-heart"></i></button>
+          <button type="button" name="like"><i class="far fa-comments"></i></button>
+          <button type="button" name="like"><i class="far fa-share-square"></i></button>
+        </div>
+      </div>
+      <div class="item-list">
+        <img src="/images/lamb.jpg" alt="">
+        <p>Food Title</p>
+        <div class="social-btn">
+          <button type="button" name="like"><i class="far fa-heart"></i></button>
+          <button type="button" name="like"><i class="far fa-comments"></i></button>
+          <button type="button" name="like"><i class="far fa-share-square"></i></button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="section desserts-section">
+    <div class="categories-content">
+      <div class="item-list">
+        <img src="/images/chicken.jpg" alt="">
+        <p>Food Title</p>
+        <div class="social-btn">
+          <button type="button" name="like"><i class="far fa-heart"></i></button>
+          <button type="button" name="like"><i class="far fa-comments"></i></button>
+          <button type="button" name="like"><i class="far fa-share-square"></i></button>
+        </div>
+      </div>
+      <div class="item-list">
+        <img src="/images/chicken.jpg" alt="">
+        <p>Food Title</p>
+        <div class="social-btn">
+          <button type="button" name="like"><i class="far fa-heart"></i></button>
+          <button type="button" name="like"><i class="far fa-comments"></i></button>
+          <button type="button" name="like"><i class="far fa-share-square"></i></button>
+        </div>
+      </div>
+      <div class="item-list">
+        <img src="/images/chicken.jpg" alt="">
+        <p>Food Title</p>
+        <div class="social-btn">
+          <button type="button" name="like"><i class="far fa-heart"></i></button>
+          <button type="button" name="like"><i class="far fa-comments"></i></button>
+          <button type="button" name="like"><i class="far fa-share-square"></i></button>
+        </div>
+      </div>
+      <div class="item-list">
+        <img src="/images/chicken.jpg" alt="">
+        <p>Food Title</p>
+        <div class="social-btn">
+          <button type="button" name="like"><i class="far fa-heart"></i></button>
+          <button type="button" name="like"><i class="far fa-comments"></i></button>
+          <button type="button" name="like"><i class="far fa-share-square"></i></button>
+        </div>
+      </div>
+      <div class="item-list">
+        <img src="/images/chicken.jpg" alt="">
+        <p>Food Title</p>
+        <div class="social-btn">
+          <button type="button" name="like"><i class="far fa-heart"></i></button>
+          <button type="button" name="like"><i class="far fa-comments"></i></button>
+          <button type="button" name="like"><i class="far fa-share-square"></i></button>
+        </div>
+      </div>
+    </div>
     </div>
   </div>
 
 
-</div>
+  <%- include('partials/footer'); -%>
