--- a/public/css/categories.css
+++ b/public/css/categories.css
@@ -1,8 +1,3 @@
-.categories-body {
-  display: flex;
-  flex-direction: column;
-  padding: 2%;
-}
 
 .food-choices {
   display: grid;
@@ -88,14 +83,6 @@
 /*categories section stylig*/
 
 .section {
-  display: inline-block;
-  position: absolute;
-     width: calc(100vw - 10vw);
-    left: 5vw;
-    top: 98%;
-    visibility: hidden;
-}
 
-#chicken {
-  visibility: visible;
+  display: none; 
 }
