--- a/public/css/categories.css
+++ b/public/css/categories.css
@@ -6,6 +6,7 @@
   grid-row: 1;
   grid-column: 2 span;
   width:100%;
+  padding: 2%;
 }
 
 .categories-btn {
@@ -13,7 +14,7 @@
   border-radius: 7px;
   cursor: pointer;
   color: #ffffff;
-  font-family: 'Poppins';
+  font-family: var(--font-family);
   text-decoration: none;
   width: 11vw;
   height: 6vh;
@@ -84,7 +85,7 @@
 /*categories section stylig*/
 
 .section {
-
+ padding: 2%;
   display: none;
 }
 
@@ -100,9 +101,9 @@
   overflow-x: auto;
   padding: 10px;
   border: 1px solid black;
-  width:90vw;
+  width: 95vw;
   position: relative;
-  left: 5vw;
+
 }
 
 .cat-new-added img {
