--- a/public/css/firstStyleSheets.css
+++ b/public/css/firstStyleSheets.css
@@ -15,11 +15,22 @@
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
   overflow-x: hidden;
   box-sizing: var(--box-sizing);
   padding: 0;
   margin: 0;
+}
+
+body::-webkit-scrollbar  {
+   background: lavender;
+   width:15px;
+
+}
+
+body::-webkit-scrollbar-thumb {
+   background: linear-gradient(white, brown, var(--txt-color), brown, white);
+   border-radius: 50px;
+   border: 1px solid black;
 }
 
 
@@ -50,6 +61,7 @@ body {
     left: 0;
     top: 0;
     z-index: -1;
+    box-shadow: 1px 3px 3px 3px #493323;
 }
 
 .web-name {
@@ -60,7 +72,7 @@ body {
    width: 50%;
    position: relative;
    left: 24%;
-   top: 10%;
+   top: 20%;
 }
 
 .web-name h1 {
