--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,52 @@
 <%- include('partials/header'); -%>
 
+<section class="main-section">
 
 
+  <div class="top-recipe-left">
+    <p class="header">Top Recipe</p>
+    <img src="../images/beef.jpg" alt="">
+    <ul class=" ">
+      <li> <input type="checkbox">¼ cup lemon juice</li>
+      <li> <input type="checkbox">¼ cup wok oil</li>
+      <li> <input type="checkbox">⅛ cup red wine vinegar</li>
+      <li> <input type="checkbox">1 tablespoon onion flakes</li>
+      <li> <input type="checkbox">1 tablespoon minced garlic</li>
+    </ul>
+  </div>
+<div class="top-recipe-right">
+  <div class="most-viewed">
+      <p class="header">Most Viewed Recipes</p>
+      <div class="top-item">
+        <p>Food Title</p>
+        <img src="../images/lamb.jpg" alt="">
+      </div>
+      <div class="top-item">
+        <p>Food Title</p>
+        <img src="../images/pork.jpg" alt="">
+      </div>
+      <div class="top-item">
+        <p>Food Title</p>
+        <img src="../images/chicken.jpg" alt="">
+      </div>
+  </div>
+  <div class="random-added">
+      <p class="header">Random Recipes</p>
+      <div class="top-item">
+        <p>Food Title</p>
+        <img src="../images/lamb.jpg" alt="">
+      </div>
+      <div class="top-item">
+        <p>Food Title</p>
+        <img src="../images/pork.jpg" alt="">
+      </div>
+      <div class="top-item">
+        <p>Food Title</p>
+        <img src="../images/chicken.jpg" alt="">
+      </div>
+  </div>
+</div>
+</section>
 
 <div class="marshmallow-div">
   <div class="marshmallow-content">
