adding animation to header

--- a/public/css/firstStyleSheets.css
+++ b/public/css/firstStyleSheets.css
@@ -2,6 +2,7 @@
 :root {
    --font-family: 'Poppins', sans-serif;
    --navbar-txt-color: #fff;
+   --box-margin: auto;
 }
 
 
@@ -13,7 +14,6 @@ html, body {
   margin:0;
 }
 
-
 /* NAVBAR STYLING STARTS*/
 
 .navbar {
@@ -22,10 +22,94 @@ html, body {
   flex-direction: row;
   justify-content: space-around;
   margin: 0;
-  padding: 10px 0;
+  padding-top:5px;
   letter-spacing: 1px;
+  font-size: calc(12px + 0.5vw);
   font-family: var(--font-family);
-  color: var(--navbar-txt-color);
   background-image: url(../images/top-background.jpg);
   background-position: left center;
 }
+
+.navbar a {
+  color: var(--navbar-txt-color);
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: var(--font-family);
+  color: var(--navbar-txt-color);
+  padding: 5%;
+  height:50%;
+  background-image: url(../images/top-background.jpg);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+}
+
+.header > * {
+  flex:0;
+  letter-spacing: 1px;
+  margin: var(--box-margin);
+  -webkit-animation:flipinx 1s ease 0s 1 normal;
+  -moz-animation:flipinx 1s ease 0s 1 normal;
+  -ms-animation:flipinx 1s ease 0s 1 normal;
+  animation:flipinx 1s ease 0s 1 normal;
+}
+
+.header-title {
+  margin:0;
+  font-size: calc(30px + 2.25vw);
+}
+
+@-webkit-keyframes flipinx {
+0%{ opacity: 0; -webkit-transform: perspective(400px) rotateX(0deg); transform: perspective(400px) rotateX(90deg); }
+40%{ -webkit-transform: perspective(400px) rotateX(0deg); transform: perspective(400px) rotateX(-10deg); }
+70%{ -webkit-transform: perspective(400px) rotateX(0deg); transform: perspective(400px) rotateX(10deg); }
+100%{ opacity: 1; -webkit-transform: perspective(400px) rotateX(0deg); transform: perspective(400px) rotateX(0deg); }
+}
+
+@keyframes flipinx {
+0%{ opacity: 0; transform: perspective(400px) rotateX(90deg); }
+40%{ transform: perspective(400px) rotateX(-10deg); }
+70%{ transform: perspective(400px) rotateX(10deg); }
+100%{ opacity: 1; transform: perspective(400px) rotateX(0deg); }
+}
+
+.header-qoute {
+  --font-family:  'Tangerine', cursive;
+
+  margin: 20px auto calc(20px + 3vh);
+  font-size: calc(20px + 1vw);
+  font-family: var(--font-family);
+}
+
+.header-photo {
+  position: absolute;
+  width:100%;
+  height:100%;
+  z-index: -2;
+  object-fit: contain;
+}
+
+
+.search-btn {
+   border: 2px solid black;
+   border-radius: 50px;
+   width:calc(100px + 15vw);
+   padding: 3px;
+   outline: none;
+   text-align: center;
+   transition:0.7s ease-in-out;
+   margin:0;
+ }
+
+ .search-btn::placeholder {
+   font-size: calc(10px + 0.30vw);
+   font-weight: bolder;
+ }
+
+  .search-btn:hover {
+    transform: scale(1.2);
+  }
