--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,9 +15,23 @@
 
    <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Tangerine&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/5b2d801348.js" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
- 
+
+  <ul class="navbar">
+    <li><a href="/">Home</a></li>
+    <li><a href="/categories">Categories</a></li>
+    <li><a href="/about">About</a></li>
+  </ul>
+
+  <div class="header">
+    <!-- <img class="header-photo" src="images/top-background.jpg" alt="header-photo"> -->
+    <h1 class="header-title"><%=title%></h1>
+    <p class="header-qoute"><em> <%=webQoute%> </em></p>
+    <input class="search-btn" type="text" placeholder="Search for Recipes">
+  </div>
