minor changes with footer

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header'); -%>
 
-<div class="home-content">
-  <div class="right-side-content">
+<main class="home-content">
+  <section class="right-side-content">
     <h2 class="top-recipe-title">Recipe of the Day</h2>
     <h4>Food Title</h4>
     <div class="content-top-recipe">
@@ -19,8 +19,8 @@
           <button type="button" name="button">Full list...</button>
       </ul>
     </div>
-  </div>
-  <div class="newly-added">
+  </section>
+  <section class="newly-added">
     <div class="new-add-title">
       <p>Newly Added Recipe</p>
     </div>
@@ -46,8 +46,8 @@
         <p>food title</p>
       </div>
     </div>
-  </div>
-  <div class="random-recipe">
+  </section>
+  <section class="random-recipe">
     <div class="random-item-title">
       <p>Random Recipe</p>
     </div>
@@ -73,7 +73,7 @@
         <p>food title</p>
       </div>
     </div>
-  </div>
-</div>
+  </section>
+</main>
 
 <%- include('partials/footer'); -%>
