--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,16 +22,16 @@
 </head>
 
 <body>
-
+<nav>
   <ul class="navbar">
     <li><a href="/">Home</a></li>
     <li><a href="/categories">Categories</a></li>
     <li><a href="/about">About</a></li>
   </ul>
+  </nav>
 
-  <div class="header">
-    <!-- <img class="header-photo" src="images/top-background.jpg" alt="header-photo"> -->
+  <header class="header">
     <h1 class="header-title"><%=title%></h1>
     <p class="header-qoute"><em> <%=webQoute%> </em></p>
     <input class="search-btn" type="text" placeholder="Search for Recipes">
-  </div>
+  </header>
